@@ -834,7 +834,8 @@ enum gcry_cipher_algos
     GCRY_CIPHER_CAMELLIA128 = 310,
     GCRY_CIPHER_CAMELLIA192 = 311,
     GCRY_CIPHER_CAMELLIA256 = 312,
-    GCRY_CIPHER_SALSA20     = 313
+    GCRY_CIPHER_SALSA20     = 313,
+    GCRY_CIPHER_SALSA20R12  = 314
   };
 
 /* The Rijndael algorithm is basically AES, so provide some macros. */
