@@ -12,7 +12,7 @@ Noteworthy changes in version 1.6.0 (unreleased)
 
  * Added support for the IDEA cipher algorithm.
 
- * Added support for the Salsa20 stream cipher.
+ * Added support for the Salsa20 and reduced Salsa20/12 stream ciphers.
 
  * Added a random number generator to directly use the system's RNG.
    Also added an interface to prefer the use of a specified RNG.
@@ -83,6 +83,7 @@ Noteworthy changes in version 1.6.0 (unreleased)
  GCRYCTL_DISABLE_PRIV_DROP       NEW.
  GCRY_CIPHER_SALSA20             NEW.
  gcry_sexp_nth_buffer            NEW.
+ GCRY_CIPHER_SALSA20R12          NEW.
 
 
 Noteworthy changes in version 1.5.0 (2011-06-29)
